--- a/portfolio.html
+++ b/portfolio.html
@@ -14,35 +14,37 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header>
-      <a href="" class="link header-logo"><span class="header-pre-logo">Web</span>Studio</a>
-      <nav class="header-nav">
-        <ul class="list header-list">
-          <li><a href="./index.html" class="link header-link">Студия</a></li>
-          <li><a href="./portfolio.html" class="link header-link">Портфолио</a></li>
-          <li><a href="" class="link header-link">Контакты</a></li>
+    <header class="header">
+      <div class="container">
+        <a href="" class="link header-logo"><span class="header-pre-logo">Web</span>Studio</a>
+        <nav class="header-nav">
+          <ul class="list header-list">
+            <li><a href="./index.html" class="link header-link">Студия</a></li>
+            <li><a href="./portfolio.html" class="link header-link">Портфолио</a></li>
+            <li><a href="" class="link header-link">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="list">
+          <li>
+            <a
+              href="mailto:info@devstudio.com"
+              class="link header-mail"
+              target="_blank"
+              rel="noreferrer noopener"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a
+              href="tel:+380961111111"
+              class="link header-tel"
+              target="_blank"
+              rel="noreferrer noopener"
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
-      </nav>
-      <ul class="list">
-        <li>
-          <a
-            href="mailto:info@devstudio.com"
-            class="link header-mail"
-            target="_blank"
-            rel="noreferrer noopener"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a
-            href="tel:+380961111111"
-            class="link header-tel"
-            target="_blank"
-            rel="noreferrer noopener"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+      </div>
     </header>
     <main>
       <section>
@@ -107,34 +109,36 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="" class="link footer-logo"><span class="footer-pre-logo">Web</span>Studio</a>
-      <address>
-        <ul class="list">
-          <li>
-            <a class="link address-maps" href="" target="_blank" rel="noreferrer noopener"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li>
-            <a
-              class="link address-mail"
-              href="mailto:info@example.com"
-              target="_blank"
-              rel="noreferrer noopener"
-              >info@example.com</a
-            >
-          </li>
-          <li>
-            <a
-              class="link address-tel"
-              href="tel:+380991111111"
-              target="_blank"
-              rel="noreferrer noopener"
-              >+38 099 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="" class="link footer-logo"><span class="footer-pre-logo">Web</span>Studio</a>
+        <address>
+          <ul class="list">
+            <li class="footer-item">
+              <a class="link address-maps" href="" target="_blank" rel="noreferrer noopener"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="footer-item">
+              <a
+                class="link address-mail"
+                href="mailto:info@example.com"
+                target="_blank"
+                rel="noreferrer noopener"
+                >info@example.com</a
+              >
+            </li>
+            <li class="footer-item">
+              <a
+                class="link address-tel"
+                href="tel:+380991111111"
+                target="_blank"
+                rel="noreferrer noopener"
+                >+38 099 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
