--- a/index.html
+++ b/index.html
@@ -11,136 +11,158 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header>
-      <a href="" class="link header-logo"><span class="header-pre-logo">Web</span>Studio</a>
-      <nav class="header-nav">
-        <ul class="list header-list">
-          <li><a href="./index.html" class="link header-link">Студия</a></li>
-          <li><a href="./portfolio.html" class="link header-link">Портфолио</a></li>
-          <li><a href="" class="link header-link">Контакты</a></li>
+    <header class="header">
+      <div class="container">
+        <a href="" class="link header-logo"><span class="header-pre-logo">Web</span>Studio</a>
+        <nav class="header-nav">
+          <ul class="list header-list">
+            <li><a href="./index.html" class="link header-link">Студия</a></li>
+            <li><a href="./portfolio.html" class="link header-link">Портфолио</a></li>
+            <li><a href="" class="link header-link">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="list">
+          <li>
+            <a
+              href="mailto:info@devstudio.com"
+              class="link header-mail"
+              target="_blank"
+              rel="noreferrer noopener"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a
+              href="tel:+380961111111"
+              class="link header-tel"
+              target="_blank"
+              rel="noreferrer noopener"
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
-      </nav>
-      <ul class="list">
-        <li>
-          <a
-            href="mailto:info@devstudio.com"
-            class="link header-mail"
-            target="_blank"
-            rel="noreferrer noopener"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a
-            href="tel:+380961111111"
-            class="link header-tel"
-            target="_blank"
-            rel="noreferrer noopener"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+      </div>
     </header>
     <main>
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="hero-btn">Заказать услугу</button>
+        <div class="container">
+          <h1 class="hero-title">
+            Эффективные решения для<br />
+            вашего бизнеса
+          </h1>
+          <button type="button" class="hero-btn">Заказать услугу</button>
+        </div>
       </section>
-      <section>
-        <h2 hidden>Peculiarities</h2>
-        <ul class="list">
-          <li>
-            <p class="peculiarities-title">Внимание к деталям</p>
-            <p class="peculiarities-text">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
-            </p>
-          </li>
-          <li>
-            <p class="peculiarities-title">Пунктуальность</p>
-            <p class="peculiarities-text">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
-          <li>
-            <p class="peculiarities-title">Планирование</p>
-            <p class="peculiarities-text">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <p class="peculiarities-title">Современные технологии</p>
-            <p class="peculiarities-text">
-              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-            </p>
-          </li>
-        </ul>
+      <section class="Peculiarities">
+        <div class="container">
+          <h2 hidden>Peculiarities</h2>
+          <ul class="list">
+            <li>
+              <p class="peculiarities-title">Внимание к деталям</p>
+              <p class="peculiarities-text">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
+            </li>
+            <li>
+              <p class="peculiarities-title">Пунктуальность</p>
+              <p class="peculiarities-text">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </li>
+            <li>
+              <p class="peculiarities-title">Планирование</p>
+              <p class="peculiarities-text">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
+            <li>
+              <p class="peculiarities-title">Современные технологии</p>
+              <p class="peculiarities-text">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
-      <section>
-        <h2 class="occupation-title">Чем мы занимаемся</h2>
-        <ul class="list">
-          <li><img src="./images/laptop-on-table.jpg" width="370" alt="ноутбук на столе" /></li>
-          <li><img src="./images/laptop-and-phone.jpg" width="370" alt="ноутбук и телефон" /></li>
-          <li><img src="./images/ipad.jpg" width="370" alt="планшет" /></li>
-        </ul>
+      <section class="occupation">
+        <div class="container">
+          <h2 class="occupation-title">Чем мы занимаемся</h2>
+          <ul class="list">
+            <li><img src="./images/laptop-on-table.jpg" width="370" alt="ноутбук на столе" /></li>
+            <li><img src="./images/laptop-and-phone.jpg" width="370" alt="ноутбук и телефон" /></li>
+            <li><img src="./images/ipad.jpg" width="370" alt="планшет" /></li>
+          </ul>
+        </div>
       </section>
-      <section>
-        <h2 class="team">Наша команда</h2>
-        <ul class="list">
-          <li>
-            <img src="./images/section-our-team-1.jpg" width="270" alt="" />
-            <p class="team-title">Игорь Демьяненко</p>
-            <p class="team-text">Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/section-our-team-2.jpg" width="270" alt="" />
-            <p class="team-title">Ольга Репина</p>
-            <p class="team-text">Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./images/section-our-team-3.jpg" width="270" alt="" />
-            <p class="team-title">Николай Тарасов</p>
-            <p class="team-text">Marketing</p>
-          </li>
-          <li>
-            <img src="./images/section-our-team-4.jpg" width="270" alt="" />
-            <p class="team-title">Михаил Ермаков</p>
-            <p class="team-text">UI Designer</p>
-          </li>
-        </ul>
+      <section class="team">
+        <div class="container">
+          <h2 class="team-title">Наша команда</h2>
+          <ul class="list">
+            <li class="team-item">
+              <img class="team-img" src="./images/section-our-team-1.jpg" width="270" alt="" />
+              <p class="team-first-text">Игорь Демьяненко</p>
+              <p class="team-text">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img class="team-img" src="./images/section-our-team-2.jpg" width="270" alt="" />
+              <p class="team-first-text">Ольга Репина</p>
+              <p class="team-text">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img class="team-img" src="./images/section-our-team-3.jpg" width="270" alt="" />
+              <p class="team-first-text">Николай Тарасов</p>
+              <p class="team-text">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img class="team-img" src="./images/section-our-team-4.jpg" width="270" alt="" />
+              <p class="team-first-text">Михаил Ермаков</p>
+              <p class="team-text">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a href="" class="link footer-logo"><span class="footer-pre-logo">Web</span>Studio</a>
-      <address>
-        <ul class="list">
-          <li>
-            <a class="link address-maps" href="" target="_blank" rel="noreferrer noopener"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li>
-            <a
-              class="link address-mail"
-              href="mailto:info@example.com"
-              target="_blank"
-              rel="noreferrer noopener"
-              >info@example.com</a
-            >
-          </li>
-          <li>
-            <a
-              class="link address-tel"
-              href="tel:+380991111111"
-              target="_blank"
-              rel="noreferrer noopener"
-              >+38 099 111 11 11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="" class="link footer-logo"><span class="footer-pre-logo">Web</span>Studio</a>
+        <address>
+          <ul class="list">
+            <li class="footer-item">
+              <a class="link address-maps" href="" target="_blank" rel="noreferrer noopener"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="footer-item">
+              <a
+                class="link address-mail"
+                href="mailto:info@example.com"
+                target="_blank"
+                rel="noreferrer noopener"
+                >info@example.com</a
+              >
+            </li>
+            <li class="footer-item">
+              <a
+                class="link address-tel"
+                href="tel:+380991111111"
+                target="_blank"
+                rel="noreferrer noopener"
+                >+38 099 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
