--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="container header-container">
         <a href="" class="link header-logo"><span class="header-pre-logo">Web</span>Studio</a>
         <nav class="header-nav">
           <ul class="list header-list">
@@ -24,7 +24,7 @@
             <li><a href="" class="link header-link">Контакты</a></li>
           </ul>
         </nav>
-        <ul class="list">
+        <ul class="list header-contact">
           <li>
             <a
               href="mailto:info@devstudio.com"
@@ -47,65 +47,69 @@
       </div>
     </header>
     <main>
-      <section>
-        <h1>Portfolio</h1>
-        <ul class="list">
-          <li><button class="navigation-btn" type="button">Все</button></li>
-          <li><button class="navigation-btn" type="button">Веб-сайти</button></li>
-          <li><button class="navigation-btn" type="button">Додатки</button></li>
-          <li><button class="navigation-btn" type="button">Дизайн</button></li>
-          <li><button class="navigation-btn" type="button">Маркетинг</button></li>
-        </ul>
+      <section class="navigation">
+        <div class="container">
+          <h1>Portfolio</h1>
+          <ul class="list">
+            <li><button class="navigation-btn" type="button">Все</button></li>
+            <li><button class="navigation-btn" type="button">Веб-сайти</button></li>
+            <li><button class="navigation-btn" type="button">Додатки</button></li>
+            <li><button class="navigation-btn" type="button">Дизайн</button></li>
+            <li><button class="navigation-btn" type="button">Маркетинг</button></li>
+          </ul>
+        </div>
       </section>
-      <section>
-        <h2>cards</h2>
-        <ul class="list">
-          <li>
-            <a href=""><img src="./images/portfolio-img-1.jpg" alt="" /></a>
-            <p class="portfolio-title">Технокряк</p>
-            <p class="portfolio-text">Веб-сайт</p>
-          </li>
-          <li>
-            <a href=""><img src="./images/portfolio-img-2.jpg" alt="" /></a>
-            <p class="portfolio-title">Постер New Orlean vs Golden Star</p>
-            <p class="portfolio-text">Дизайн</p>
-          </li>
-          <li>
-            <a href=""><img src="./images/portfolio-img-3.jpg" alt="" /></a>
-            <p class="portfolio-title">Ресторан Seafood</p>
-            <p class="portfolio-text">Додаток</p>
-          </li>
-          <li>
-            <a href=""><img src="./images/portfolio-img-4.jpg" alt="" /></a>
-            <p class="portfolio-title">Проєкт Prime</p>
-            <p class="portfolio-text">Маркетинг</p>
-          </li>
-          <li>
-            <a href=""><img src="./images/portfolio-img-5.jpg" alt="" /></a>
-            <p class="portfolio-title">Проєкт Boxes</p>
-            <p class="portfolio-text">Додаток</p>
-          </li>
-          <li>
-            <a href=""><img src="./images/portfolio-img-6.jpg" alt="" /></a>
-            <p class="portfolio-title">Inspiration has no Borders</p>
-            <p class="portfolio-text">Веб-сайт</p>
-          </li>
-          <li>
-            <a href=""><img src="./images/portfolio-img-7.jpg" alt="" /></a>
-            <p class="portfolio-title">Видання Limited Edition</p>
-            <p class="portfolio-text">Дизайн</p>
-          </li>
-          <li>
-            <a href=""><img src="./images/portfolio-img-8.jpg" alt="" /></a>
-            <p class="portfolio-title">Проект LAB</p>
-            <p class="portfolio-text">Маркетинг</p>
-          </li>
-          <li>
-            <a href=""><img src="./images/portfolio-img-9.jpg" alt="" /></a>
-            <p class="portfolio-title">Growing Business</p>
-            <p class="portfolio-text">Додаток</p>
-          </li>
-        </ul>
+      <section class="portfolio">
+        <div class="container">
+          <h2>cards</h2>
+          <ul class="list">
+            <li class="portfolio-item">
+              <a href=""><img class="portfolio-img" src="./images/portfolio-img-1.jpg" width="370" alt="" /></a>
+              <p class="portfolio-title">Технокряк</p>
+              <p class="portfolio-text">Веб-сайт</p>
+            </li>
+            <li class="portfolio-item">
+              <a href=""><img class="portfolio-img" src="./images/portfolio-img-2.jpg" alt="" /></a>
+              <p class="portfolio-title">Постер New Orlean vs Golden Star</p>
+              <p class="portfolio-text">Дизайн</p>
+            </li>
+            <li class="portfolio-item">
+              <a href=""><img class="portfolio-img" src="./images/portfolio-img-3.jpg" alt="" /></a>
+              <p class="portfolio-title">Ресторан Seafood</p>
+              <p class="portfolio-text">Додаток</p>
+            </li>
+            <li class="portfolio-item">
+              <a href=""><img class="portfolio-img" src="./images/portfolio-img-4.jpg" alt="" /></a>
+              <p class="portfolio-title">Проєкт Prime</p>
+              <p class="portfolio-text">Маркетинг</p>
+            </li>
+            <li class="portfolio-item">
+              <a href=""><img class="portfolio-img" src="./images/portfolio-img-5.jpg" alt="" /></a>
+              <p class="portfolio-title">Проєкт Boxes</p>
+              <p class="portfolio-text">Додаток</p>
+            </li>
+            <li class="portfolio-item">
+              <a href=""><img class="portfolio-img" src="./images/portfolio-img-6.jpg" alt="" /></a>
+              <p class="portfolio-title">Inspiration has no Borders</p>
+              <p class="portfolio-text">Веб-сайт</p>
+            </li>
+            <li class="portfolio-item">
+              <a href=""><img class="portfolio-img" src="./images/portfolio-img-7.jpg" alt="" /></a>
+              <p class="portfolio-title">Видання Limited Edition</p>
+              <p class="portfolio-text">Дизайн</p>
+            </li>
+            <li class="portfolio-item">
+              <a href=""><img class="portfolio-img" src="./images/portfolio-img-8.jpg" alt="" /></a>
+              <p class="portfolio-title">Проект LAB</p>
+              <p class="portfolio-text">Маркетинг</p>
+            </li>
+            <li class="portfolio-item">
+              <a href=""><img class="portfolio-img" src="./images/portfolio-img-9.jpg" alt="" /></a>
+              <p class="portfolio-title">Growing Business</p>
+              <p class="portfolio-text">Додаток</p>
+            </li class="portfolio-item">
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="footer">
