--- a/portfolio.html
+++ b/portfolio.html
@@ -19,9 +19,9 @@
         <a href="" class="link header-logo"><span class="header-pre-logo">Web</span>Studio</a>
         <nav class="header-nav">
           <ul class="list header-list">
-            <li><a href="./index.html" class="link header-link">Студия</a></li>
-            <li><a href="./portfolio.html" class="link header-link">Портфолио</a></li>
-            <li><a href="" class="link header-link">Контакты</a></li>
+            <li class="header-item"><a href="./index.html" class="link header-link">Студия</a></li>
+            <li class="header-item"><a href="./portfolio.html" class="link header-link">Портфолио</a></li>
+            <li class="header-item"><a href="" class="link header-link">Контакты</a></li>
           </ul>
         </nav>
         <ul class="list header-contact">
@@ -49,20 +49,20 @@
     <main>
       <section class="navigation">
         <div class="container">
-          <h1>Portfolio</h1>
-          <ul class="list">
-            <li><button class="navigation-btn" type="button">Все</button></li>
-            <li><button class="navigation-btn" type="button">Веб-сайти</button></li>
-            <li><button class="navigation-btn" type="button">Додатки</button></li>
-            <li><button class="navigation-btn" type="button">Дизайн</button></li>
-            <li><button class="navigation-btn" type="button">Маркетинг</button></li>
+          <h1 class="navigation-title visually-hidden">Portfolio</h1>
+          <ul class="list navigation-list">
+            <li class="navigation-item"><button class="navigation-btn" type="button">Все</button></li>
+            <li class="navigation-item"><button class="navigation-btn" type="button">Веб-сайти</button></li>
+            <li class="navigation-item"><button class="navigation-btn" type="button">Додатки</button></li>
+            <li class="navigation-item"><button class="navigation-btn" type="button">Дизайн</button></li>
+            <li class="navigation-item"><button class="navigation-btn" type="button">Маркетинг</button></li>
           </ul>
         </div>
       </section>
       <section class="portfolio">
         <div class="container">
-          <h2>cards</h2>
-          <ul class="list">
+          <h2 class="portfolio-title visually-hidden">cards</h2>
+          <ul class="list portfolio-list">
             <li class="portfolio-item">
               <a href=""><img class="portfolio-img" src="./images/portfolio-img-1.jpg" width="370" alt="" /></a>
               <p class="portfolio-title">Технокряк</p>
