--- a/portfolio.html
+++ b/portfolio.html
@@ -11,6 +11,13 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -69,42 +76,42 @@
               <p class="portfolio-text">Веб-сайт</p>
             </li>
             <li class="portfolio-item">
-              <a href=""><img class="portfolio-img" src="./images/portfolio-img-2.jpg" alt="" /></a>
+              <a href=""><img class="portfolio-img" src="./images/portfolio-img-2.jpg" width="370" alt="" /></a>
               <p class="portfolio-title">Постер New Orlean vs Golden Star</p>
               <p class="portfolio-text">Дизайн</p>
             </li>
             <li class="portfolio-item">
-              <a href=""><img class="portfolio-img" src="./images/portfolio-img-3.jpg" alt="" /></a>
+              <a href=""><img class="portfolio-img" src="./images/portfolio-img-3.jpg" width="370" alt="" /></a>
               <p class="portfolio-title">Ресторан Seafood</p>
               <p class="portfolio-text">Додаток</p>
             </li>
             <li class="portfolio-item">
-              <a href=""><img class="portfolio-img" src="./images/portfolio-img-4.jpg" alt="" /></a>
+              <a href=""><img class="portfolio-img" src="./images/portfolio-img-4.jpg" width="370" alt="" /></a>
               <p class="portfolio-title">Проєкт Prime</p>
               <p class="portfolio-text">Маркетинг</p>
             </li>
             <li class="portfolio-item">
-              <a href=""><img class="portfolio-img" src="./images/portfolio-img-5.jpg" alt="" /></a>
+              <a href=""><img class="portfolio-img" src="./images/portfolio-img-5.jpg" width="370" alt="" /></a>
               <p class="portfolio-title">Проєкт Boxes</p>
               <p class="portfolio-text">Додаток</p>
             </li>
             <li class="portfolio-item">
-              <a href=""><img class="portfolio-img" src="./images/portfolio-img-6.jpg" alt="" /></a>
+              <a href=""><img class="portfolio-img" src="./images/portfolio-img-6.jpg" width="370" alt="" /></a>
               <p class="portfolio-title">Inspiration has no Borders</p>
               <p class="portfolio-text">Веб-сайт</p>
             </li>
             <li class="portfolio-item">
-              <a href=""><img class="portfolio-img" src="./images/portfolio-img-7.jpg" alt="" /></a>
+              <a href=""><img class="portfolio-img" src="./images/portfolio-img-7.jpg" width="370" alt="" /></a>
               <p class="portfolio-title">Видання Limited Edition</p>
               <p class="portfolio-text">Дизайн</p>
             </li>
             <li class="portfolio-item">
-              <a href=""><img class="portfolio-img" src="./images/portfolio-img-8.jpg" alt="" /></a>
+              <a href=""><img class="portfolio-img" src="./images/portfolio-img-8.jpg" width="370" alt="" /></a>
               <p class="portfolio-title">Проект LAB</p>
               <p class="portfolio-text">Маркетинг</p>
             </li>
             <li class="portfolio-item">
-              <a href=""><img class="portfolio-img" src="./images/portfolio-img-9.jpg" alt="" /></a>
+              <a href=""><img class="portfolio-img" src="./images/portfolio-img-9.jpg" width="370" alt="" /></a>
               <p class="portfolio-title">Growing Business</p>
               <p class="portfolio-text">Додаток</p>
             </li class="portfolio-item">
